# supercell

./: Cargo.toml  LICENSE  README.md
libs/simulation/: Cargo.toml
libs/simulation-raylib/: Cargo.toml
libs/simulation-raylib/src/: main.rs
libs/simulation/benches/: bench_world.rs
libs/simulation/src/: cell.rs  lib.rs  rules.rs  world.rs
libs/simulation/src/cell/: cubecell.rs  mod.rs
