[workspace]
resolver = "2"
members = [
  "libs/*",
]

# size optimization build
[profile.release]
opt-level = 3 # optimize for size
lto = true # enable lto
codegen-units = 1 # increase optimizations
panic = "abort" # disable stack unwind
strip = "symbols" # strip bin
#debug = true # enable for flamegraph

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"